# popRocks

./: .gitignore  .gitmodules  AlbumArt.cpp  AlbumArt.hpp  AutoFader.hpp  BeatDetect.cpp  BeatDetect.hpp  CApp.cpp  CApp.h  CApp_Commands.cpp  CConsole.cpp  CMakeLists.txt  CMakeSettings.json  ColorChangeListener.hpp  Controls.cpp  Controls.hpp  Cue.cpp  Cue.hpp  DynamicGain.hpp  ExclusiveIndicator.hpp  FFTLineRenderer.hpp  FFTRenderer.cpp  FPSCounter.hpp  Hash.hpp  ID3V2.cpp  ID3V2.hpp  LightPack.cpp  MP4.cpp  MP4.hpp  Metadata.hpp  Playlist.cpp  Playlist.hpp  Polyline.hpp  Preset.cpp  Preset.hpp  README.md  Settings.cpp  Text.cpp  Text.hpp  Utils.cpp  (+8 more)
Data/: Presets.json
Source/: AlbumArt.hpp  Bicubic.cpp  Bicubic.hpp  Buffer.hpp  CApp_Commands.cpp  CConsole.h  FFTRenderer.hpp  Gaussian.cpp  Gaussian.hpp  LightPack.hpp  LineRenderer.hpp  Mappings.cpp  Mappings.h  Metadata.cpp  OscilloscopeRenderer.hpp  Polyline.hpp  Preset.cpp  RecordAudioStream.h  Renderer.hpp  Settings.hpp  TagLoader.hpp  Volume.hpp
